// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineEditTextInput /> InlineEditTextInput - default 1`] = `
<span
  className="inline-edit-text-input-link"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <span
    className="kbc-icon-pencil"
  />
</span>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - disabled save button when text is not valid 1`] = `
<div
  className="inline-edit-text-input"
>
  <form
    className="inline-edit-text-input-form"
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={false}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="inline-edit-text-input-buttons"
    >
      <button
        className="inline-edit-text-input-cancel btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="inline-edit-text-input-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - edit mode 1`] = `
<div
  className="inline-edit-text-input"
>
  <form
    className="inline-edit-text-input-form"
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={false}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="inline-edit-text-input-buttons"
    >
      <button
        className="inline-edit-text-input-cancel btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="inline-edit-text-input-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - read mode 1`] = `
<span
  className="inline-edit-text-input-link"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <span
    className="kbc-icon-pencil"
  />
</span>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - saving in edit mode 1`] = `
<div
  className="inline-edit-text-input"
>
  <form
    className="inline-edit-text-input-form"
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={true}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="inline-edit-text-input-buttons"
    >
      <button
        className="inline-edit-text-input-cancel btn btn-link"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="inline-edit-text-input-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
      <span
        className="fa fa-spin fa-spinner"
      />
    </div>
  </form>
</div>
`;
